# eventful

./: .gitignore  CMakeLists.txt  README.md  install-vs.bat
src/: CMakeLists.txt
src/eventful/: event.h
tests/: CMakeLists.txt
tests/implementation/: test.cpp
